--- a/src/angular/lightbox/lightbox.scss
+++ b/src/angular/lightbox/lightbox.scss
@@ -12,7 +12,7 @@
   box-sizing: border-box;
   overflow: hidden;
   outline: 0;
-  background-color: var(--sbb-color-background);
+  background-color: var(--sbb-lightbox-background-color);
 
   // The dialog container width should completely fill its parent overlay element.
   width: 100%;
