--- a/src/angular/sidebar/icon-sidebar/icon-sidebar.scss
+++ b/src/angular/sidebar/icon-sidebar/icon-sidebar.scss
@@ -182,7 +182,7 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  background-color: var(--sbb-icon-sidebar-collapse-button-background-color);
+  background-color: var(--sbb-icon-sidebar-background-color);
   cursor: pointer;
   outline: 0;
   overflow: hidden;
