--- a/src/angular/tooltip/tooltip.scss
+++ b/src/angular/tooltip/tooltip.scss
@@ -49,7 +49,7 @@
   }
 
   &::before {
-    border-color: var(--sbb-color-weak-accent);
+    border-color: var(--sbb-tooltip-border-color);
     z-index: 1;
   }
 
@@ -112,7 +112,7 @@
   color: var(--sbb-tooltip-color);
   text-overflow: ellipsis;
   background-color: var(--sbb-tooltip-background-color);
-  border: var(--sbb-border-width) solid var(--sbb-color-weak-accent);
+  border: var(--sbb-border-width) solid var(--sbb-tooltip-border-color);
   border-radius: var(--sbb-border-radius);
   z-index: 2;
 
@@ -142,7 +142,7 @@
 }
 
 .sbb-tooltip-close-button {
-  color: var(--sbb-color-weak-accent);
+  color: var(--sbb-tooltip-close-button-color);
   position: absolute;
   width: var(--sbb-icon-size-default);
   height: var(--sbb-icon-size-default);
